# InvoiceRenamer

./: .dockerignore  .editorconfig  .gitignore  COPYRIGHT  Dockerfile  INSTALL.md  LICENSE.md  NOTICE  README.md  TODO.md  accounts.csv  config.toml  pyproject copy.toml  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
.github/: dependabot.yml
.github/workflows/: build-exe.yml
docs/: TODO.md
src/invoice_renamer/: accounts.csv  main.py
src/invoice_renamer/data/: accounts_default.csv
src/invoice_renamer/logic/: backup_manager.py  config_manager.py  ocr_preprocess.py  pdf_handlers.py  selection_analyzer_v6.py
src/invoice_renamer/ui/: __init__.py  pdf_viewer.py
src/invoice_renamer/utils/: constants.py  error_handler.py  logger.py  string_util.py
